--- a/index1.html
+++ b/index1.html
@@ -50,6 +50,61 @@
     -->
   </head>
   <body>
+<!--22.08.17
+ol과 ul은 리스트의 부모태그
+li > list 태그
+-->
+<ol type="I" start="4"><!-- ordered list-->
+    <li>첫번째</li>
+    <li>두번째</li>
+    <li>첫번째</li>
+    <li>두번째</li>
+    <li>첫번째</li>
+    <li>두번째</li>
+    <li>첫번째</li>
+    <li>두번째</li>
+    <li>첫번째</li>
+    <li>두번째</li>
+    <li>첫번째</li>
+    <li>두번째</li>
+    <li>첫번째</li>
+    <li>두번째</li>
+</ol>
+<ul type="square"><!-- unordered list-->
+    <li>첫번째</li>
+    <li>두번째</li>
+</ul>
+<div>
+    <!--
+        인라인, 블록이란
+        블록은 너비를 전부 갖는애
+    -->
+    <div style="width: 100px;height: 100px;background-color: purple;"></div>
+    <div style="width: 100px;height: 100px;background-color: skyblue;"></div>
+<!--
+    inline, 인라인은 자기 옆을 허락하는 애
+    연속적임
+-->
+<!--
+    display 영역을 어떻게 출력할지 설정하는 명령어
+    block,inline,inline-block,none,flex, 등등이 있다.
+-->
+    <div style="display: inline-block; width: 100px;height: 100px;background-color: pink;"></div>
+    <div style="display: inline-block; width: 100px;height: 100px;background-color: plum;"></div>
+</div>
+<div>
+<!--
+    float 텍스트화 왼쪽 정렬, 오른쪽 정렬
+    이후 배울 css 스타일들과 충돌하는 경우가 있다. 위치 잡기 힘들 때가 있다.
+-->
+    <div style="float: left;width: 100px;height: 100px;background-color: black;"></div>
+    <div style="float: right; width: 100px;height: 100px;background-color: greenyellow;"></div>
+
+</div>
+
+
+
+<!---08.16-->
     <div>
       <p>
         ㅁㄴㅇㄴㅁㅇㄴㅁㅇㅁㄴㅇㄴㅁㅇㄴㅁㅇㅁㄴㅇㄴㅁㅇㄴㅁㅇㅁㄴㅇㄴㅁㅇㄴㅁㅇㅁㄴㅇㄴㅁㅇㄴㅁㅇㅁㄴㅇㄴㅁㅇㄴㅁㅇ
