--- a/08.22.실습/index.html
+++ b/08.22.실습/index.html
@@ -24,7 +24,6 @@
       .line2 {
         border: 1px solid black;
         text-align: center;
-        border
       }
       .colla {
         border-collapse: collapse;
@@ -51,35 +50,70 @@
               />
             </td>
             <th class="line1" style="border-left: 0px">성명</th>
-            <td class="line">정재훈</td>
+            <td class="line" style="padding-left: 10px">정재훈</td>
             <th class="line1">영문</th>
-            <td class="line">Jaehoon Jung</td>
+            <td class="line" style="padding-left: 10; padding-right: 10px">
+              Jaehoon Jung
+            </td>
             <th class="line1">한문</th>
-            <td class="line" style="border-right: 0px">鄭載勳</td>
+            <td class="line2" style="border-right: 0px; padding-left: 10">
+              鄭載勳
+            </td>
           </tr>
           <tr>
             <th class="line1" style="border-left: 0px">생년월일</th>
-            <td colspan="3" style="border: 1px solid black">1993년7월27일</td>
+            <td colspan="3" style="border: 1px solid black; padding-left: 10px">
+              1993년7월27일
+            </td>
             <th class="line1">나이(만)</th>
-            <td class="line" style="border-right: 0px">29</td>
+            <td class="line2" style="border-right: 0px">29</td>
           </tr>
           <tr>
             <th class="line1" style="border-left: 0px">휴대폰</th>
-            <td style="border: 1px solid black">010-7327-6503</td>
+            <td
+              style="
+                border: 1px solid black;
+                padding-left: 10;
+                padding-right: 40px;
+              "
+            >
+              010-7327-6503
+            </td>
             <th class="line1">전화번호</th>
-            <td colspan="3" style="border: 1px solid black; border-right: 0px">
+            <td
+              colspan="3"
+              style="
+                border: 1px solid black;
+                border-right: 0px;
+                padding-left: 10;
+              "
+            >
               02-553-6503
             </td>
           </tr>
           <tr>
             <th class="line1" style="border-left: 0px">이메일</th>
-            <td colspan="5" style="border: 1px solid black; border-right: 0px">
+            <td
+              colspan="5"
+              style="
+                border: 1px solid black;
+                border-right: 0px;
+                padding-left: 10;
+              "
+            >
               hhoonjjang@gmail.com
             </td>
           </tr>
           <tr>
             <th class="line1" style="border-left: 0px">주소</th>
-            <td colspan="5" style="border: 1px solid black; border-right: 0px">
+            <td
+              colspan="5"
+              style="
+                border: 1px solid black;
+                border-right: 0px;
+                padding-left: 10;
+              "
+            >
               서울 강남구 삼성로 212
             </td>
           </tr>
@@ -96,9 +130,16 @@
           >
             보훈대상자
           </th>
-          <td class="line2">해당 □ 해당없음 ■</td>
+          <td class="line2" style="padding-left: 10px; padding-right: 10px">
+            해당 □ 해당없음 ■
+          </td>
           <th class="line1" style="text-align: center; width: 30%">장애여부</th>
-          <td class="line2" style="border-right: 0px">해당 □ 해당없음 ■</td>
+          <td
+            class="line2"
+            style="border-right: 0px; padding-left: 10px; padding-right: 10px"
+          >
+            해당 □ 해당없음 ■
+          </td>
         </thead>
       </table>
       <!-- 학력사항 -->
