--- a/0824설문지내용/index.html
+++ b/0824설문지내용/index.html
@@ -10,17 +10,51 @@
     <form action="#" method="get">
       <fieldset>
         <legend>설문조사</legend>
-        <label class="Tlabel" for="food">음식</label>
+        <div>
+          <div>
+            <label class="Tlabel" for="food">선호하는 음식은?(중복가능)</label>
+            <br />
+            <br />
+            <label for="food">소고기</label>
+            <input type="checkbox" id="food1" name="food" />
+            <label for="food">물고기</label>
+            <input type="checkbox" id="food2" name="food" />
+            <label for="food">돼지고기</label>
+            <input type="checkbox" id="food3" name="food" />
+            <label for="food">물고기</label>
+            <input type="checkbox" id="food4" name="food" />
+            <label for="food">풀</label>
+            <input type="checkbox" id="food5" name="food" />
+            <label for="food">공기</label>
+            <input type="checkbox" id="food6" name="food" />
+          </div>
+         
+           <div>
+            <label class="Tlabel" for="drink">선호하는 음료는?(중복가능)</label>
+            <br />
+            <br />
+
+            <label for="drink">물</label>
+            <input type="checkbox" id="drink1" name="drink" />
+            <label for="drink">소주</label>
+            <input type="checkbox" id="drink2" name="drink" />
+            <label for="drink">맥주</label>
+            <input type="checkbox" id="drink3" name="drink" />
+            <label for="drink">양주</label>
+            <input type="checkbox" id="drink4" name="drink" />
+            <label for="drink">꼬냑</label>
+            <input type="checkbox" id="drink5" name="drink" />
+            <label for="drink">바닷물</label>
+            <input type="checkbox" id="drink6" name="drink" />
+          </div>
+        </div>
         <br />
         <br />
-        <label id="food">소고기</label>
-        <input type="checkbox" id="food1" name="food" />
-        <label id="food">물고기</label>
-        <input type="checkbox" id="food2" name="food" />
-        <label id="food">돼지고기</label>
-        <input type="checkbox" id="food3" name="food" />
-        <label id="food">물고기</label>
-        <input type="checkbox" id="food2" name="food" />
+      </fieldset>
+    </form>
+  </body>
+</html>
+        </div>
       </fieldset>
     </form>
   </body>
