--- a/0826과제유튜브/index.html
+++ b/0826과제유튜브/index.html
@@ -31,85 +31,119 @@
         <div class="loginicon">로그인하기</div>
       </div>
     </div>
-    <!-- 사이드메뉴바 -->
-    <div class="sidemenubar">
-      <table>
-        <thead>
-          <tr></tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="menuimg">
-              <img src="house-solid.svg" alt="" />
-            </td>
-            <td class="menutext">홈</td>
-          </tr>
-          <tr>
-            <td class="menuimg">이미지</td>
-            <td class="menutext">탐색</td>
-          </tr>
-          <tr>
-            <td class="menuimg">이미지</td>
-            <td class="menutext">shorts</td>
-          </tr>
-          <tr>
-            <td class="menuimg">이미지</td>
-            <td class="menutext">구독</td>
-          </tr>
-          <hr />
-          <tr>
-            <td class="menuimg">이미지</td>
-            <td class="menutext">보관함</td>
-          </tr>
-          <tr>
-            <td class="menuimg">이미지</td>
-            <td class="menutext">시청기록</td>
-          </tr>
-          <tr>
-            <td class="menuimg">이미지</td>
-            <td class="menutext">전체</td>
-          </tr>
-          <tr>
-            <td class="menuimg">이미지</td>
-            <td class="menutext">전체</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <!-- Flex Box -->
-    <div class="flexBox">
-      <!-- 상단 카테고리바 -->
-      <div class="categorybar">
-        <div>전체</div>
-        <div>실시간</div>
-        <div>음악</div>
-        <div>게임</div>
-        <div>관광지</div>
-        <div>요리 프로그램</div>
-        <div>축구</div>
-        <div>요리</div>
-        <div>최근에 업로드</div>
+    <!-- 메인내용 -->
+    <div class="mainbody">
+      <!-- 사이드메뉴바 -->
+      <div class="sidemenubar">
+        <table>
+          <thead>
+            <tr></tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="menuimg">
+                <img src="house-solid.svg" alt="" />
+              </td>
+              <td class="menutext">홈</td>
+            </tr>
+            <tr>
+              <td class="menuimg">이미지</td>
+              <td class="menutext">탐색</td>
+            </tr>
+            <tr>
+              <td class="menuimg">이미지</td>
+              <td class="menutext">shorts</td>
+            </tr>
+            <tr>
+              <td class="menuimg">이미지</td>
+              <td class="menutext">구독</td>
+            </tr>
+            <hr />
+            <tr>
+              <td class="menuimg">이미지</td>
+              <td class="menutext">보관함</td>
+            </tr>
+            <tr>
+              <td class="menuimg">이미지</td>
+              <td class="menutext">시청기록</td>
+            </tr>
+            <tr>
+              <td class="menuimg">이미지</td>
+              <td class="menutext">전체</td>
+            </tr>
+            <tr>
+              <td class="menuimg">이미지</td>
+              <td class="menutext">전체</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
-      <!--동영상바-->
-      <div class="videobar">
-        <!-- 메인동영상바 -->
-        <div class="videobar-main">
-          <div class="thumbnail">썸네일</div>
-          <div class="youtuberprofile">프로필</div>
-          <div class="videotitle">영상제목</div>
-          <div class="youtubername">이름</div>
-          <div class="viewcounting">조회수</div>
-          <div class="uploaddate">오늘날로부터-업로드날짜</div>
+      <!-- Flex Box -->
+      <div class="flexBox">
+        <!-- 상단 카테고리바 -->
+        <div class="categorybar">
+          <div class="text">전체</div>
+          <div class="text">실시간</div>
+          <div class="text">음악</div>
+          <div class="text">게임</div>
+          <div class="text">관광지</div>
+          <div class="text">요리 프로그램</div>
+          <div class="text">축구</div>
+          <div class="text">요리</div>
+          <div class="text">최근에 업로드</div>
         </div>
+        <!--동영상바-->
+        <div class="videobar">
+          <!-- 메인동영상바 -->
+          <div class="videobar-main">
+            <div class="thumbnail">썸네일</div>
+            <div class="youtuberprofile">프로필</div>
+            <div class="videotitle">영상제목</div>
+            <div class="youtubername">이름</div>
+            <div class="viewcounting">조회수</div>
+            <div class="uploaddate">오늘날로부터-업로드날짜</div>
+          </div>
+          <!-- 쇼츠동영상바 -->
+          <div class="videobar-shorts">
+            <hr />
+            <h2>Shorts</h2>
+            <div class="thumbnail">썸네일</div>
+            <div class="videotitle">영상제목</div>
+            <div class="viewcounting">조회수</div>
+          </div>
+          <!-- 일반동영상바-->
+          <div class="videobar-normal">
+            <hr />
+            <div class="thumbnail">썸네일</div>
+            <div class="youtuberprofile">프로필</div>
+            <div class="videotitle">영상제목</div>
+            <div class="youtubername">이름</div>
+            <div class="viewcounting">조회수</div>
+            <div class="uploaddate">오늘날로부터-업로드날짜</div>
+          </div>
+          <!-- 인기동영상바 -->
+          <div class="videobar-popular">
+            <hr />
+            <h2>인기</h2>
+            <div class="thumbnail">썸네일</div>
+            <div class="youtuberprofile">프로필</div>
+            <div class="videotitle">영상제목</div>
+            <div class="youtubername">이름</div>
+            <div class="viewcounting">조회수</div>
+            <div class="uploaddate">오늘날로부터-업로드날짜</div>
+          </div>
 
-        <!-- 쇼츠동영상바 -->
-        <div class="videobar-shorts"></div>
-        <!-- 일반동영상바 짧게-->
-        <div class="videobar-normal1"></div>
-        <!-- 인기동영상바 -->
-        <div class="videobar-popular"></div>
-        <!--  일반동영상바 무한-->
-        <div class="videobar-infinite"></div>
+          <!--  일반동영상바 무한-->
+          <div class="videobar-infinite">
+            <hr />
+            <div class="thumbnail">썸네일</div>
+            <div class="youtuberprofile">프로필</div>
+            <div class="videotitle">영상제목</div>
+            <div class="youtubername">이름</div>
+            <div class="viewcounting">조회수</div>
+            <div class="uploaddate">오늘날로부터-업로드날짜</div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
