--- a/0826과제유튜브/index.html
+++ b/0826과제유튜브/index.html
@@ -28,7 +28,7 @@
         <div class="optionicon">
           <button><img src="ellipsis-vertical-solid.svg" alt="" /></button>
         </div>
-        <div class="loginicon">로그인하기</div>
+        <div class="loginicon"><img src="로그인아이콘.PNG" alt="" /></div>
       </div>
     </div>
     <!-- 메인내용 -->
@@ -40,38 +40,38 @@
             <tr></tr>
           </thead>
           <tbody>
-            <tr>
+            <tr class="hoverevent">
               <td class="menuimg">
                 <img src="house-solid.svg" alt="" />
               </td>
               <td class="menutext">홈</td>
             </tr>
-            <tr>
-              <td class="menuimg">이미지</td>
+            <tr class="hoverevent">
+              <td class="menuimg"><img src="compass-regular.svg" alt="" /></td>
               <td class="menutext">탐색</td>
             </tr>
-            <tr>
-              <td class="menuimg">이미지</td>
+            <tr class="hoverevent">
+              <td class="menuimg"><img src="쇼츠아이콘.PNG" alt="" /></td>
               <td class="menutext">shorts</td>
             </tr>
-            <tr>
-              <td class="menuimg">이미지</td>
+            <tr class="hoverevent">
+              <td class="menuimg"><img src="구독아이콘.PNG" alt="" /></td>
               <td class="menutext">구독</td>
             </tr>
-            <hr />
-            <tr>
-              <td class="menuimg">이미지</td>
+
+            <tr class="hoverevent">
+              <td class="menuimg"><img src="보관함아이콘.PNG" alt="" /></td>
               <td class="menutext">보관함</td>
             </tr>
-            <tr>
-              <td class="menuimg">이미지</td>
+            <tr class="hoverevent">
+              <td class="menuimg"><img src="시청기록아이콘.PNG" alt="" /></td>
               <td class="menutext">시청기록</td>
             </tr>
-            <tr>
+            <tr class="hoverevent">
               <td class="menuimg">이미지</td>
               <td class="menutext">전체</td>
             </tr>
-            <tr>
+            <tr class="hoverevent">
               <td class="menuimg">이미지</td>
               <td class="menutext">전체</td>
             </tr>
