--- a/0901계산기/index.html
+++ b/0901계산기/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="calculator">
+    <!-- <div class="calculator">
       <div class="cheader1"><input type="text" /></div>
       <div class="body1">
         <div class="row1">
@@ -49,8 +49,8 @@
           <div><button>=</button></div>
         </div>
       </div>
-    </div>
-    <!-- <button onclick="Num('1')">1</button>
+    </div> -->
+    <button onclick="Num('1')">1</button>
     <button onclick="Num('2')">2</button>
     <button onclick="Num('3')">3</button>
     <button onclick="Num('4')">4</button>
@@ -62,7 +62,7 @@
     <button onclick="Num('0')">0</button>
 
     <button onclick="factor()">!</button>
-  <button onClick="sum()">+</button>
+    <button onClick="sum()">+</button>
     <button onClick="sub()">-</button>
 
     <button onClick="mult()">X</button>
@@ -70,13 +70,12 @@
     <button onClick="div()">/</button>
     <button onClick="remain()">%</button> -->
 
-    <!-- <button onclick="operator1('+')">+</button>
+    <button onclick="operator1('+')">+</button>
     <button onclick="operator1('-')">-</button>
     <button onclick="operator1('*')">*</button>
     <button onclick="operator1('/')">/</button>
     <button onclick="operator1('%')">%</button>
 
-    <button onclick="calc1()">=</button> -->
-    <!-- -->
+    <button onclick="calc1()">=</button>
   </body>
 </html>
