--- a/0826진도/grid/index.html
+++ b/0826진도/grid/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="mosaic">
+    <!-- <div class="mosaic">
       <div></div>
       <div></div>
       <div></div>
@@ -17,14 +17,14 @@
       <div class="mosaic-item"></div>
       <div class="mosaic-item"></div>
       <div class="mosaic-item"></div>
-      <!-- <div class="mosaic-item"></div>
+      <div class="mosaic-item"></div>
       <div class="mosaic-item"></div>
       <div class="mosaic-item"></div>
       <div class="mosaic-item"></div>
       <div class="mosaic-item"></div>
       <div class="mosaic-item"></div>
       <div class="mosaic-item"></div> -->
-    </div>
+    <!-- </div> -->
     <div class="grid">
       <!-- flex와 유사
         영역처리하는 방법
@@ -38,19 +38,11 @@ grid 디자인에 좀더 맞춰져있다. 영역 분할이 더 확실하다.-->
       <div class="grid-item">5</div>
       <div class="grid-item">6</div>
       <div class="grid-item">7</div> -->
-      <div class="sidebar">
-        <div>번 메뉴</div>
-        <div>번 메뉴</div>
-        <div>번 메뉴</div>
-        <div>번 메뉴</div>
-        <div>번 메뉴</div>
-        <div>번 메뉴</div>
-        <div>번 메뉴</div>
-        <div>번 메뉴</div>
-        <div>번 메뉴</div>
-        <div>번 메뉴</div>
-      </div>
+      <div class="sidebar">sidebar</div>
       <div class="header">header</div>
+      <!-- <div class="abc">
+        <div>8번 아이템</div>
+      </div> -->
       <div class="content">content</div>
       <div class="footer">footer</div>
     </div>
