--- a/1006유튜브/index.html
+++ b/1006유튜브/index.html
@@ -80,65 +80,100 @@
             <div class="categoryText"><div>최근에 업로드된 동영상</div></div>
             <div class="categoryText"><div>감상한 동영상</div></div>
           </div>
-          <div class="mainVideo">
-            <div class="normalVideo">1</div>
-            <div class="normalVideo">2</div>
-            <div class="normalVideo">3</div>
-            <div class="normalVideo">4</div>
-            <div class="normalVideo">5</div>
-            <div class="normalVideo">6</div>
-            <div class="normalVideo">7</div>
-            <div class="normalVideo">8</div>
-            <div class="normalVideo">9</div>
-            <div class="normalVideo">10</div>
-            <div class="normalVideo">11</div>
-            <div class="normalVideo">12</div>
-            <div class="shortsVideo">
-              <div class="shortViedo">1</div>
-              <div class="shortViedo">2</div>
-              <div class="shortViedo">3</div>
-              <div class="shortViedo">4</div>
-              <div class="shortViedo">5</div>
-              <div class="shortViedo">6</div>
-              <div class="shortViedo">7</div>
-              <div class="shortViedo">8</div>
+          <div class="videoBar">
+            <div class="videoTopContainer">
+              <div class="normalVideoItem">
+                <div class="thumbNail">
+                  <img src="thumbnail.webp" alt="" />
+                  <div class="hiddenvideo">
+                    <video src="video.mp4" autoplay muted></video>
+                  </div>
+                </div>
+                <div class="videoFlexbox">
+                  <div class="userProfile">
+                    <img src="profile.PNG" alt="" />
+                  </div>
+                  <div class="videoInfo">
+                    <div class="videoTitleText">
+                      아기수달가족에게 직접잡은 무지개 송어를 줘보았다.
+                    </div>
+                    <div class="videoInfoFooter">
+                      <div class="userName">정브르</div>
+                      <div class="viewUpdate">
+                        <div class="viewCount">조회수</div>
+                        <div class="borderline">&middot</div>
+                        <div class="upDated">최근업로드시간전</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="hiddenSetting">
+                    <img src="setting.PNG" alt="" />
+                  </div>
+                </div>
+                <div class="hiddenfooter">
+                  <div class="container">
+                    <img src="latervideo.png" alt="" />
+                    <div class="laterviedo">나중에 볼 동영상</div>
+                  </div>
+                  <div class="container">
+                    <img src="addlist.png" />
+                    <div class="addlist">현재 재생목록에 추가</div>
+                  </div>
+                </div>
+              </div>
+              <div class="normalVideoItem">2</div>
+              <div class="normalVideoItem">3</div>
+              <div class="normalVideoItem">
+                <div class="thumbNail"><img src="thumbnail.webp" alt="" /></div>
+                <div class="videoFlexbox">
+                  <div class="userProfile">
+                    <img src="profile.PNG" alt="" />
+                  </div>
+                  <div class="videoInfo">
+                    <div class="videoTitleText">
+                      아기수달가족에게 직접잡은 무지개 송어를 줘보았다.
+                    </div>
+                    <div class="videoInfoFooter">
+                      <div class="userName">정브르</div>
+                      <div class="viewUpdate">
+                        <div class="viewCount">조회수</div>
+                        <div class="borderline">&middot</div>
+                        <div class="upDated">최근업로드시간전</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="hiddenSetting">
+                    <img src="setting.PNG" alt="" />
+                  </div>
+                </div>
+                <div class="hiddenfooter">
+                  <div class="laterviedo">
+                    <div class="container">나중에 볼 동영상</div>
+                  </div>
+                  <div class="addlist">
+                    <div class="container">목록에추가</div>
+                  </div>
+                </div>
+              </div>
+              <div class="normalVideoItem">5</div>
+              <div class="normalVideoItem">6</div>
+              <div class="normalVideoItem">7</div>
+              <div class="normalVideoItem">8</div>
+              <div class="normalVideoItem">9</div>
+              <div class="normalVideoItem">10</div>
+              <div class="normalVideoItem">11</div>
+              <div class="normalVideoItem">12</div>
             </div>
-            <div class="normalVideo">1</div>
-            <div class="normalVideo">2</div>
-            <div class="normalVideo">3</div>
-            <div class="normalVideo">4</div>
-            <div class="normalVideo">5</div>
-            <div class="normalVideo">6</div>
-            <div class="normalVideo">7</div>
-            <div class="normalVideo">8</div>
-            <div class="normalVideo">9</div>
-            <div class="normalVideo">10</div>
-            <div class="normalVideo">11</div>
-            <div class="normalVideo">12</div>
-            <div class="normalVideo">1</div>
-            <div class="normalVideo">2</div>
-            <div class="normalVideo">3</div>
-            <div class="normalVideo">4</div>
-            <div class="normalVideo">5</div>
-            <div class="normalVideo">6</div>
-            <div class="normalVideo">7</div>
-            <div class="normalVideo">8</div>
-            <div class="normalVideo">9</div>
-            <div class="normalVideo">10</div>
-            <div class="normalVideo">11</div>
-            <div class="normalVideo">12</div>
-            <div class="normalVideo">1</div>
-            <div class="normalVideo">2</div>
-            <div class="normalVideo">3</div>
-            <div class="normalVideo">4</div>
-            <div class="normalVideo">5</div>
-            <div class="normalVideo">6</div>
-            <div class="normalVideo">7</div>
-            <div class="normalVideo">8</div>
-            <div class="normalVideo">9</div>
-            <div class="normalVideo">10</div>
-            <div class="normalVideo">11</div>
-            <div class="normalVideo">12</div>
+            <div class="shortsVideo">
+              <div class="shortVideoItem">1</div>
+              <div class="shortVideoItem">2</div>
+              <div class="shortVideoItem">3</div>
+              <div class="shortVideoItem">4</div>
+              <div class="shortVideoItem">5</div>
+              <div class="shortVideoItem">6</div>
+              <div class="shortVideoItem">7</div>
+              <div class="shortVideoItem">8</div>
+            </div>
           </div>
         </div>
       </div>
